--- a/coliCierculo/coliCierculo.csproj
+++ b/coliCierculo/coliCierculo.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="circulo.cs" />
     <Compile Include="Cuadro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
