--- a/coliCierculo/coliCierculo.csproj
+++ b/coliCierculo/coliCierculo.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="circulo.cs" />
+    <Compile Include="Colision.cs" />
     <Compile Include="Cuadro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
